[project]
name = "bio_data_manager"
dynamic = ["version"]  # This relies on git tags for versioning
authors = [
    { name = "Fabio Bove", email = "fabio.bove.dr@gmail.com" }
]
description = "A small package to manage biological data."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["bioinformatics", "data", "manipulation"]

# Specify the required dependencies with correct versions
dependencies = [
    "rdkit",
    "numpy>=1.0.0,<2.0.0",
    "pandas==2.2.3",
    "tqdm~=4.66.4",
    "scipy~=1.14.0",
    "biopython~=1.84",
    "viennarna~=2.6.4",
    "rdkit==2024.3.5",
    "torch==2.3.1",  # Default to the CPU version for simplicity
]

# Define optional dependencies like testing and CUDA support
[project.optional-dependencies]
test = [
    "pytest==7.2.1",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "pytest-md==0.2.0",
]
cuda = [
    "torch==2.3.1+cu118",
]

[project.urls]
Homepage = "https://github.com/fabiobove-dr/bio_data_manager"
Issues = "https://github.com/fabiobove-dr/bio_data_manager/issues"

# Setuptools git versioning configuration
[tool.setuptools-git-versioning]
enabled = true

[build-system]
requires = ["setuptools>=61.0", "setuptools-git-versioning>=2.0,<3", "wheel"]
build-backend = "setuptools.build_meta"
