[project]
name = "bio_dataset_manager"
dynamic = ["version"]
authors = [
    { name = "Fabio Bove", email = "fabio.bove.dr@gmail.com" }
]
description = "A small package to manage biological data."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["bio-informatics", "data", "manipulation"]
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=1.0.0,<2.0.0",
    "pandas>=2.2.3",
    "tqdm>=4.67.1",
    "scipy>=1.15.2",
    "biopython~=1.84",
    "viennarna>=2.6.4",
    "rdkit>=2024.9.5",
    "torch>=2.3.1",
]
[project.optional-dependencies]
test = [
    "pytest>=7.3.2",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]

cuda = [
    "torch==2.3.1+cu121",
]

[project.urls]
Homepage = "https://github.com/fabiobove-dr/bio_dataset_manager"
Issues = "https://github.com/fabiobove-dr/bio_dataset_manager/issues"

[build-system]
requires = ["setuptools", "versioningit"]
build-backend = "setuptools.build_meta"

[tool.versioningit]
vcs = "git"

[tool.versioningit.write]
file = "src/version.py"

[project.scripts]
mol_eval = "eval:main"

[tool.coverage.run]
omit = ["*tests*", "commons.py", "*config.py", "!src/commons.py"]

[tool.setuptools.exclude-package-data]
"*" = ["*"]
"src" = []

[tool.versioningit.format]
distance = "{base_version}"
dirty = "{base_version}"
distance-dirty = "{base_version}"